fix: change flex wrap on cards

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,10 @@ code {
   box-shadow: 0px -10px 0 0 #1a1f2c;
 }
 
+.container {
+  width: auto;
+}
+
 .container .drop {
   position: relative;
   width: 400px;
